# newsBot

./: config.py  main.py  news_links.txt  pyproject.toml  test.py
