[tool.poetry]
name = "repl_python3_newsBot"
version = "0.1.0"
description = ""
authors = ["yusupovanton <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
redis = "^4.1.0"
telebot = "^0.0.4"
bs4 = "^0.0.1"
fuzzywuzzy = "^0.18.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
